# server/authHandlers.go
@@ -7,6 +7,7 @@ import (
 	"github.com/gin-gonic/gin"
 
 	"net/http"
+	"log"
 )
 
 func (s *GinServer) SignUp(c *gin.Context) {
@@ -48,24 +49,22 @@ func (s *GinServer) LogIn(c *gin.Context) {
 		return
 	}
 	
-	accessToken, refreshToken, err := s.service.GenerateTokens(user.ID)
+	access, refresh, err := s.service.GenerateTokens(user.ID)
 	if err != nil {
 		c.Error(err)
 		return
 	}
 
-	u.WriteTokenToCookies(c, *accessToken, 
-													 *refreshToken, 
+	u.WriteTokenToCookies(c, *access, 
+													 *refresh, 
 													 s.conf.Auth.Access.ExpirationTime,
 													 s.conf.Auth.Refresh.ExpirationTime)
 }
 
 func (s *GinServer) GetUserInfo(c *gin.Context) {
-	v, exists := c.Get("claims")
-	claims, ok := v.(*entities.Claims)
-
-	if !ok || !exists {
-		c.Error(e.ErrAuthFailed)
+	claims, err := s.getClaims(c)
+	if err != nil {
+		c.Error(err)
 		return
 	}
 
@@ -76,4 +75,34 @@ func (s *GinServer) GetUserInfo(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, user)
+}
+
+func (s *GinServer) UpdateTokens(c *gin.Context) {
+	claims, err := s.getClaims(c)
+	if err != nil {
+		c.Error(err)
+		return
+	}
+
+	access, refresh, err := s.service.GenerateTokens(claims.UserID)
+	if err != nil {
+		c.Error(err)
+		return
+	}
+	
+	u.WriteTokenToCookies(c, *access, 
+													 *refresh, 
+													 s.conf.Auth.Access.ExpirationTime,
+													 s.conf.Auth.Refresh.ExpirationTime)
+}
+
+func (s *GinServer) getClaims(c *gin.Context) (*entities.Claims, error) {
+	v, exists := c.Get("claims")
+	claims, ok := v.(*entities.Claims)
+
+	if !ok || !exists {
+		log.Printf("Error: missing claims")
+		return nil, e.ErrAuthFailed
+	}
+	return claims, nil
 }
